--- a/exercises_rest/package.json
+++ b/exercises_rest/package.json
@@ -5,7 +5,8 @@
   "main": "exercise_controller.mjs",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon exercises_controller.mjs"
+    "dev": "nodemon exercises_controller.mjs",
+    "start": "node exercises_controller.mjs"
   },
   "author": "",
   "license": "ISC",
